# PCS26

./: README.md
esercitazione1/: CMakeLists.txt  file_processing.cpp  main_arguments.cpp
esercitazione2/: CMakeLists.txt  doubleArrayStats.cpp  memoryLayout.cpp
esercitazione3/: CMakeLists.txt  rational.cpp  rational.hpp
esercitazione4/: CMakeLists.txt  bubblesort.hpp  helpers.hpp  insertionsort.hpp  measure_sorts.cpp  measurements.csv  selectionsort.hpp  test_bubblesort_numeric.cpp  test_bubblesort_string.cpp  test_insertionsort_numeric.cpp  test_insertionsort_string.cpp  test_selectionsort_numeric.cpp  test_selectionsort_string.cpp
